added chats and threads
